--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@foxui/core": "^0.4.7",
+		"@foxui/visual": "^0.4.7",
 		"@sveltejs/adapter-cloudflare": "^7.2.6",
 		"exifr": "^7.1.3",
 		"maplibre-gl": "^5.17.0",
