--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@foxui/core": "^0.4.7",
 		"@foxui/visual": "^0.4.7",
 		"@sveltejs/adapter-cloudflare": "^7.2.6",
+		"@use-gesture/vanilla": "^10.3.1",
 		"exifr": "^7.1.3",
 		"maplibre-gl": "^5.17.0",
 		"wrangler": "^4.61.1"
